--- a/wiki/GraphFileFormats.wiki
+++ b/wiki/GraphFileFormats.wiki
@@ -155,6 +155,28 @@ The description mode allows for comments that describe the file. This section of
 This file represents the familiarity of fifteen famous frog-kings of ancient Tridentia.
 }}}
 
+== Longitudinal Mode ==
+In longitudinal extended graphs, the arcs/edges can be annotated by time slice, e.g.
+{{{
+*Arcs t=1
+1 5
+2 3
+1 4
+*Arcs t=2
+1 5
+2 3
+1 3
+3 4
+*Arcs t=3
+1 5
+2 3
+1 3
+3 4
+4 5
+5 6
+}}}
+
+<wiki:comment>
 == Image Mode ==
 
 The image mode allows one to represent the graph using images at the nodes. This feature is experimental, but works in basic situations. The format is similar to the vertex mode, with an index followed by a file name. The file paths should be relative to the file being loaded. For example:
@@ -167,6 +189,7 @@ The image mode allows one to represent the graph using images at the nodes. This
 5 "ed.jpg"
 6 "frank.jpg"
 }}}
+</wiki:comment>
 
 -----
 
