Edited wiki page DynamicGraphs through web user interface.

--- a/wiki/DynamicGraphs.wiki
+++ b/wiki/DynamicGraphs.wiki
@@ -1,4 +1,5 @@
 #summary Working with dynamic graphs in GraphExplorer
+#sidebar HelpContents
 
 = Dynamic Graphs =
 Dynamic graphs are graphs that change over time.
