Edited wiki page HelpContents through web user interface.

--- a/wiki/HelpContents.wiki
+++ b/wiki/HelpContents.wiki
@@ -3,4 +3,9 @@
 
   * [GettingStarted Getting Started]
   * [GraphFileFormats File Formats]
+   * [EdgeListFormat EdgeList]
+   * [PajekFormat Pajek]
+   * [UCINetFormat UCINet]
+   * [GraphMLFormat GraphML]
+   * [DyNetMLFormat DyNetML]
   * [DynamicGraphs Working with Dynamic Graphs]
