--- a/wiki/GraphMLFormat.wiki
+++ b/wiki/GraphMLFormat.wiki
@@ -1,5 +1,7 @@
 #summary Support for GraphML file format.
 #sidebar HelpContents
 
+See also GraphFileFormats.
+
 = _GraphML_ file format =
 _GraphML_ is an XML format with partial support.
