Edited wiki page HelpContents through web user interface.

--- a/wiki/HelpContents.wiki
+++ b/wiki/HelpContents.wiki
@@ -1,7 +1,7 @@
 #summary Help Contents
 #sidebar HelpContents
 
-  * [GettingStarted Getting Started]
+  * [GraphExplorer Getting Started]
   * [GraphFileFormats Supported File Formats]
    * [EdgeListFormat Edge List]
    * [PajekFormat Pajek]
