Edited wiki page HelpContents through web user interface.

--- a/wiki/HelpContents.wiki
+++ b/wiki/HelpContents.wiki
@@ -1,6 +1,8 @@
 #summary Help Contents
 #sidebar HelpContents
 
+= Help Contents =
+
   * [GraphExplorer Getting Started]
   * [GraphFileFormats Supported File Formats]
    * [EdgeListFormat Edge List]
